Fix codemirror scrollbar match search

--- a/Barebone/Styles/barebone.css
+++ b/Barebone/Styles/barebone.css
@@ -22,7 +22,7 @@
   font-family: "Ionicons";
 
   src: url("node_modules.ionicons.dist.fonts.ionicons.eot?v=3.0.0-alpha.3");
-  src: url("node_modules.ionicons.dist.fonts.ionicons.eot?v=3.0.0-alpha.3#iefix") format("embedded-opentype"), url("node_modules.ionicons.dist.fonts.ionicons.woff2?v=3.0.0-alpha.3") format("woff2"), url("node_modules.ionicons.dist.fonts.ionicons.woff?v=3.0.0-alpha.3") format("woff"), url("node_modules.ionicons.dist.fonts.ionicons.ttf?v=3.0.0-alpha.3") format("truetype"), url("node_modules.ionicons.dist.fonts.ionicons.svg?v=3.0.0-alpha.3#Ionicons") format("svg"); font-weight: normal; font-style: normal; 
+  src: url("node_modules.ionicons.dist.fonts.ionicons.eot?v=3.0.0-alpha.3#iefix") format("embedded-opentype"), url("node_modules.ionicons.dist.fonts.ionicons.woff2?v=3.0.0-alpha.3") format("woff2"), url("node_modules.ionicons.dist.fonts.ionicons.woff?v=3.0.0-alpha.3") format("woff"), url("node_modules.ionicons.dist.fonts.ionicons.ttf?v=3.0.0-alpha.3") format("truetype"), url("node_modules.ionicons.dist.fonts.ionicons.svg?v=3.0.0-alpha.3#Ionicons") format("svg"); font-weight: normal; font-style: normal;
 }
 
 #toast-container > div {
@@ -42,6 +42,16 @@
 
 #notification.show {
   visibility: visible;
+}
+
+#code-editor {
+    /*width:800px;
+    height:600px;*/
+    border: 1px solid grey;
+}
+
+.CodeMirror {
+    border: 1px solid #ddd;
 }
 
 /* iCheckbox Square */
